--- a/package.json
+++ b/package.json
@@ -7,8 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "repository": {
+  "type": "git",
+  "url": "git+https://github.com/ryanklintworth/garage-sale.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+  "url": "https://github.com/ryanklintworth/garage-sale/issues"
+  },
+  "homepage": "https://github.com/ryanklintworth/garage-sale#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
