--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "ryanandpatrick",
+  "engines": {
+    "node":"14.15.0"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
